--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
-    "leaflet": "1.9.4"
+    "leaflet": "1.9.4",
+    "@google/genai": "^1.34.0",
+    "@monaco-editor/react": "4.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
