--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
     "leaflet": "1.9.4",
-    "@google/genai": "^1.34.0",
-    "@monaco-editor/react": "4.7.0"
+    "@monaco-editor/react": "4.7.0",
+    "@google/genai": "^1.34.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
