--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bulk-dkim-checker",
+  "name": "email-sparks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +13,7 @@
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
     "leaflet": "1.9.4",
-    "@monaco-editor/react": "4.7.0",
-    "@google/genai": "^1.34.0"
+    "@monaco-editor/react": "4.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
